# tisch-example

./: crud.cabal  stack.yaml
app/: Main.hs
src/: Types.hs  User.hs
src/DB/: User.hs
